--- a/03_MockMvc/src/main/resources/application.properties
+++ b/03_MockMvc/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=goodee
 # mybatis
 mybatis.configuration.arg-name-based-constructor-auto-mapping=true
 mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.type-aliases-package=org.shark.boot03.board.dto
