--- a/18_SpringSecurity/src/main/resources/application.properties
+++ b/18_SpringSecurity/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=goodee
 # jpa
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=truedb_security
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.devtools.restart.enabled=false
